@@ -416,7 +416,7 @@ module ActionController
       
       def add_default_params_from_inputs_for(form) # :nodoc:
         (form / "input").each do |input|
-          next unless %w[text hidden].include?(input.attributes["type"])
+          next unless %w[text password hidden].include?(input.attributes["type"])
           add_form_data(input, input.attributes["value"])
         end
       end
